[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Non Battle Code/Battle Wrap/Battle/BattleOptions.gd" type="Script" id=2]
[ext_resource path="res://Non Battle Scenes/Battle Wrap/Battle/Action.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="Actions" type="Node2D"]
script = ExtResource( 2 )
ActionButton = ExtResource( 3 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuActions" type="HBoxContainer" parent="Menu"]
margin_right = 53.0
margin_bottom = 19.0

[node name="ActionSelectLabel" type="Label" parent="Menu/MenuActions"]
margin_right = 53.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.0823529, 0.4, 0.85098, 1 )
custom_fonts/font = SubResource( 1 )
text = "ACTION"

[node name="MenuList" type="HBoxContainer" parent="Menu"]
margin_top = 23.0
margin_right = 53.0
margin_bottom = 23.0
